--- a/www/fancy.css
+++ b/www/fancy.css
@@ -1,6 +1,5 @@
 body {
-    background-image: url('http://bgfons.com/upload/tile_texture3097.jpg');
-    background-size: 200px 200px;
+    background-color: gray;
     text-align: center;
     color: white;
     font-family: "georgia", serif;
@@ -10,15 +9,12 @@ h1, h2 {
     margin-top: 0.1em;
 }
 
-.well {
+.well, .navbar-default {
     color: black;
+    background-color: lightgray;
 }
 
 img {
     max-width: 100%;
     max-height: 100%;
-}
-
-.svg-container {
-    padding: 10px;
 }
