--- a/www/fancy.css
+++ b/www/fancy.css
@@ -1,7 +1,7 @@
 body {
-    background-color: gray;
+    background-color: #eeeeee;
     text-align: center;
-    color: white;
+    color: black;
     font-family: "georgia", serif;
 }
 
@@ -10,7 +10,6 @@ h1, h2 {
 }
 
 .well, .navbar-default {
-    color: black;
     background-color: lightgray;
 }
 
